gccida/c1/convert_regs_1
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_1/src/reg-stack.c:3103:4: error: expected ';' after expression
rtx v25; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_1/src/reg-stack.c:3103:5: error: use of undeclared identifier 'v25'
rtx v25; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_1/src/reg-stack.c:3105:6: error: use of undeclared identifier 'v27'
rtx *v27; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_1/src/reg-stack.c:3199:12: error: expected expression
*( _OWORD *)&v37.top = *( _OWORD *)&aux->top; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_1/src/reg-stack.c:3199:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v37.top = *( _OWORD *)&aux->top; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_1/src/reg-stack.c:3199:35: error: expected expression
*( _OWORD *)&v37.top = *( _OWORD *)&aux->top; 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_1/src/reg-stack.c:3199:27: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v37.top = *( _OWORD *)&aux->top; 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_1/src/reg-stack.c:3232:15: error: use of undeclared identifier 'off_607A24'
fprintf( v21, off_607A24, ( unsigned int)i); 
              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_1/src/reg-stack.c:3237:1: error: use of undeclared identifier 'v25'
v25 = v2->end; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_1/src/reg-stack.c:3238:17: error: use of undeclared identifier 'v25'
if ( *( _WORD *)v25 == 33 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_1/src/reg-stack.c:3239:1: error: use of undeclared identifier 'v25'
v25 = ( rtx)v25[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_1/src/reg-stack.c:3241:14: error: expected expression
v27 = ( rtx *)( FP_mode_reg + 120); 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_1/src/reg-stack.c:3241:1: error: use of undeclared identifier 'v27'
v27 = ( rtx *)( FP_mode_reg + 120); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_1/src/reg-stack.c:3249:39: error: use of undeclared identifier 'v27'
v28 = gen_rtx_fmt_ee( SET, VOIDmode, *v27, nan); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_1/src/reg-stack.c:3250:29: error: use of undeclared identifier 'v25'
v25 = emit_insn_after( v28, v25); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_1/src/reg-stack.c:3250:1: error: use of undeclared identifier 'v25'
v25 = emit_insn_after( v28, v25); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_1/src/reg-stack.c:3251:19: error: use of undeclared identifier 'v25'
subst_stack_regs( v25, &v37); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_1/src/reg-stack.c:3254:1: error: use of undeclared identifier 'v27'
v27 += 59; 
^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/convert_regs_1/src/obj/reg-stack.o] Error 1
